cabal-version:   3.4
name:            gsasl-hs
version:         0.1.0.0
synopsis:        High performance bindings for GNU SASL library.
description:     High performance bindings for GNU SASL library.
license:         BSD-3-Clause
license-file:    LICENSE
author:          Commelina
maintainer:      maosics@gmail.com

-- copyright:
category:        Network
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:    Network.SASL.SASL
  other-modules:
    Network.SASL.Internal.Exception
    Network.SASL.Internal.FFI
    Network.SASL.Internal.Types

  -- other-extensions:
  build-depends:
    , base        >=4.16 && <5
    , bytestring

  hs-source-dirs:     src
  build-tool-depends: hsc2hs:hsc2hs
  extra-libraries:    gsasl
  default-language:   GHC2021

executable example
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  hs-source-dirs:   example
  main-is:          Main.hs
  build-depends:
    , base        >=4.16 && <5
    , bytestring
    , gsasl-hs

test-suite gsasl-hs-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base              >=4.16 && <5
    , bytestring
    , gsasl-hs
    , tasty
    , tasty-hunit
    , tasty-quickcheck
